Added error messages functionality

--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
 </head>
 <body>
 
+    <div class="errors"></div>
     <header>
         <h2>Metric/Imperial Unit Conversion</h2>
         <input type="text" name="value" id="value" value="0">
